# octuner

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  run_tests.py  setup.py  sitemap.xml
.github/workflows/: docs.yml  publish.yml
config_templates/: README.md  gemini_basic.yaml  multi_provider.yaml  openai_basic.yaml
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  installation.md  reference.md
examples/: best_sentiment_analysis.yaml  best_sentiment_tunable_llm.yaml  sentiment_analysis_tunable_llm.py
getting-started/: index.html
installation/: index.html
octuner/: __init__.py
octuner/config/: loader.py
octuner/discovery/: __init__.py  discovery.py
octuner/optimization/: __init__.py  auto.py  executor.py  optimizer.py
octuner/providers/: __init__.py  base.py  registry.py
octuner/utils/: exporter.py  patcher.py  setter.py
reference/: index.html
search/: search_index.json
tests/: README.md  conftest.py
tests/fixtures/config_samples/: test_openai_config.yaml
tests/fixtures/datasets/: sentiment_dataset.json
tests/integration/: test_end_to_end.py
tests/unit/test_config/: test_loader.py
tests/unit/test_optimization/: test_auto.py  test_executor.py
tests/unit/test_providers/: test_base.py  test_gemini.py  test_openai.py  test_provider_registry.py
tests/unit/test_tunable/: test_mixin.py  test_tunable_registry.py  test_types.py
tests/unit/test_utils/: test_exporter.py
